--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -23,6 +23,8 @@
                     <div class="form-control">
                         <label for="description">Description</label>
                         <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
+                        <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+
                     </div>
                     <% if (editing) { %>
                         <input type="hidden" value="<%= product._id %>" name="productId">
