--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -16,6 +16,8 @@
                     <div class="form-control">
                         <label for="Password">Password</label>
                         <input type="password" name="password" id="password">
+                        <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+
                     </div>
 
 
